<resources>
    <string name="app_name">Taskmate</string>
    <string name="good_morning">Good morning,</string>
    <string name="default_user_name">User</string>
    <string name="total">Total</string>
    <string name="done">Done</string>
    <string name="pending">Pending</string>
    <string name="my_tasks">My Tasks</string>
    <plurals name="tasks_count">
        <item quantity="one">%1$d task</item>
        <item quantity="other">%1$d tasks</item>
    </plurals>
    <string name="new_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="hint_task">What needs to be done?</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="add_task_content_description">Add Task</string>

    <!-- Splash Strings -->
    <string name="app_name_caps">TASKMATE</string>
    <string name="daily_planner">Your daily planner</string>

    <!-- Login Strings -->
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>

    <!-- Signup Strings -->
    <string name="create_account">Create account</string>
    <string name="join_taskmate">Fill in your details below</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account">Already have an account?</string>

    <!-- Dev Info Strings -->
    <string name="dev_info_title">Developer info</string>
    <string name="developer_name">Sunera Bandara</string>
    <string name="student_no_label">Student No.:</string>
    <string name="student_no_value">2023t01850</string>
    <string name="personal_statement_label">Personal statement:</string>
    <string name="personal_statement_value">\"Passionate about creating elegant solutions to complex problems.\"</string>
    <string name="release_version_template">Release version: %1$s</string>
    <string name="exit">Exit</string>

    <!-- User Info Strings -->
    <string name="profile">Profile</string>
    <string name="user_info_label">USER INFO.</string>
    <string name="username_template">Username: %1$s</string>
    <string name="email_template">Email: %1$s</string>
    <string name="not_set">Not set</string>
    <string name="edit_info">Edit info.</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_confirm">Really want to sign out?</string>
    <string name="ok">OK</string>

    <!-- Empty State -->
    <string name="no_tasks_message">No tasks added yet</string>
    <string name="tap_to_start">Tap the + button to start</string>
</resources>